--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-12312
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Junseok`s Protfolio</title>
+    <meta naem="description" content="Portfolio for world-renowned software engineer Junseok">
+    <meta naem="author" content="Junseok">  
+    <link rel="icon"  type="imgage/png" href="imgs/favicon.png"/>
+    <script src="https://kit.fontawesome.com/5b16d6c0cb.js"
+    crossorigin="anonymous">
+    </script>    
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap" 
+    rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css"/>
+    <script src="main.js" defer></script>
+</head>
+<body>
+    
+</body>
+</html>
