--- a/index.html
+++ b/index.html
@@ -15,9 +15,36 @@
     rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css"/>
-    <script src="main.js" defer></script>
+    <script defer src="main.js"></script>
 </head>
 <body>
-    <h1>aa</h1>
+    <!--Navbar  -->
+    <nav id="navbar">
+        <div class="navar_logo">
+            <i class="fab fa-diaspora"></i>
+            <a href="#">Junseok</a>
+        </div>
+        <div class="navbar_menu">
+            <ul class="navbar__menu">
+                <li class="navbar__menu__item">Home</li>
+                <li class="navbar__menu__item">About</li>
+                <li class="navbar__menu__item">Skills</li>
+                <li class="navbar__menu__item">My work</li>
+                <li class="navbar__menu__item">Testimonials</li>
+                <li class="navbar__menu__item">Contact</li>
+            </ul>
+        </div>
+    </nav>
+    <!-- About -->
+    <sction id="about"></sction>
+    <!-- Skills -->
+    <sction id="skills"></sction>
+    <!-- Work -->
+    <sction id="work"></sction>
+    <!-- Testimonials -->
+    <sction id="testimonials"></sction>
+    <!-- Contact -->
+    <sction id="contact"></sction>
+
 </body>
 </html>
