--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
             </ul>
         </div>
     </nav>
+    <!-- Home -->
+    <sction id="home">
+        <img src="imgs/profile.jpg" 
+        alt="Junseok profile photo" 
+        class="home__avata"
+    />
+    <h1 class="home__title">Hello,<br />I`m Junseok Coder</h1>
+    <h2 class="home__desccription">디자인이 가능한 Front-End 개발자 입니다.</h2>
+    <button class="home__contact">Contact Me</button>
+
+    </sction>
     <!-- About -->
     <sction id="about"></sction>
     <!-- Skills -->
