--- a/index.html
+++ b/index.html
@@ -92,7 +92,75 @@
         </div>        
     </sction>
     <!-- Skills -->
-    <sction id="skills"></sction>
+    <sction id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+            나의 장단점
+        </p>
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset_title">Skills</h3>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>HTML</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill_value"></div>
+                    </div>
+                    </div>
+                    <div class="skill_description">
+                        <span>CSS</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill_value"></div>
+                    </div>
+                    <div class="skill_description">
+                        <span>JavaScript</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill_value"></div>
+                    </div>
+                    <div class="skill_description">
+                        <span>JAVA</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill_value"></div>
+                    </div>
+                    <div class="skill_description">
+                        <span>REACT</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill_value"></div>
+                    </div>
+            </div>
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset_title">Tools</h3>
+                    <ul class="tools_list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>IntelliJ</span></li>
+                        <li><span>Spring</span></li>
+                        <li><span>Android Studio Code</span></li>
+                        <li><span>Skentch app</span></li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="skillset_title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                        <li><span>Scrum Master</span></li>
+                        <li><span>Math</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </sction>
     <!-- Work -->
     <sction id="work"></sction>
     <!-- Testimonials -->
