--- a/index.html
+++ b/index.html
@@ -162,7 +162,40 @@
         </div>
     </sction>
     <!-- Work -->
-    <sction id="work"></sction>
+    <sction id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">
+                All<span class="category__count">8</span>
+            </button>
+            <button class="category__btn">
+                Front-end<span class="category__count">3</span>
+            </button>
+            <button class="category__btn">
+                Back-end<span class="category__count">3</span>
+            </button>
+            <button class="category__btn">
+                Mobile<span class="category__count">2</span>
+            </button>
+        </div>
+<!-- 이건수정필요 -->
+        <div class="work__projects">
+            <a href="https://github.com/SeokJunIm/portfolio"
+            class="project"
+            target="blank"
+            >
+        <!-- <a href="" class="project" data-type="back-end"> -->
+        <img src="/imgs/projects/youtube.jpg" alt="Youtube">
+        <div class="project__description">
+            <h3>Youtube Site</h3>
+            <span>Clone coding with HTML and CSS</span>
+        </div>
+        <!-- </a> -->
+    </a>
+        </div>
+    </sction>
+
     <!-- Testimonials -->
     <sction id="testimonials"></sction>
     <!-- Contact -->
