--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 Mobile<span class="category__count">2</span>
             </button>
         </div>
-<!-- 이건수정필요 -->
+        <!-- 이건수정필요 -->
         <div class="work__projects">
             <a href="https://github.com/SeokJunIm/portfolio"
             class="project"
@@ -195,9 +195,37 @@
     </a>
         </div>
     </sction>
-
     <!-- Testimonials -->
-    <sction id="testimonials"></sction>
+    <sction id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="/imgs/testimonials/people1.jpg" 
+                alt="People" 
+                class="testimonial__avatar"
+                />
+                <div class="testimonial__sppech-bubble">
+                    <p>
+                        무슨말을할까...
+                    </p>
+                <p class="name"><a href="">Junseok</a> /Samsung</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="/imgs/testimonials/people1.jpg" 
+                alt="People" 
+                class="testimonial__avatar"
+                />
+                <div class="testimonial__sppech-bubble">
+                    <p>
+                        무슨말을할까...
+                    </p>
+                <p class="name"><a href="">Junseok</a> /Samsung</p>
+                </div>
+            </div>
+        </div>
+    </sction>
     <!-- Contact -->
     <sction id="contact"></sction>
 
