--- a/index.html
+++ b/index.html
@@ -227,7 +227,20 @@
         </div>
     </sction>
     <!-- Contact -->
-    <sction id="contact"></sction>
-
+    <sction id="contact">
+        <h1 class="contach__title">Let`s talk</h1>
+        <h2 class="contact__email">zkzk1gh@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/SeokJunIm/" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="#" target="_blank">
+                <i class="fa fa-linkedin-square"></i>
+            </a>
+        </div>
+        <p class="contact__rights">
+            2022 Junseok coding            
+        </p>
+    </sction>
 </body>
 </html>
