--- a/index.html
+++ b/index.html
@@ -179,19 +179,46 @@
                 Mobile<span class="category__count">2</span>
             </button>
         </div>
-        <!-- 이건수정필요 -->
+        
         <div class="work__projects">
             <a href="https://github.com/SeokJunIm/portfolio"
             class="project"
+            data-type="front-end"
             target="blank"
-            >
-        <!-- <a href="" class="project" data-type="back-end"> -->
+            >        
         <img src="/imgs/projects/youtube.jpg" alt="Youtube">
         <div class="project__description">
             <h3>Youtube Site</h3>
             <span>Clone coding with HTML and CSS</span>
+        </div>        
+    </a>
+    <a href="" class="project" data-type="back-end">
+        <img class="project__img" src="/imgs/projects/youtube.jpg" alt="" />
+        <div class="project__description">
+        <h3>Project</h3>
+        <span>Explanation</span>
         </div>
-        <!-- </a> -->
+    </a>
+    <a href="" class="project" data-type="back-end">
+        <img class="project__img" src="/imgs/projects/youtube.jpg" alt="" />
+        <div class="project__description">
+        <h3>Project</h3>
+        <span>Explanation</span>
+        </div>
+    </a>
+    <a href="" class="project" data-type="back-end">
+        <img class="project__img" src="/imgs/projects/youtube.jpg" alt="" />
+        <div class="project__description">
+        <h3>Project</h3>
+        <span>Explanation</span>
+        </div>
+    </a>
+    <a href="" class="project" data-type="back-end">
+        <img class="project__img" src="/imgs/projects/youtube.jpg" alt="" />
+        <div class="project__description">
+        <h3>Project</h3>
+        <span>Explanation</span>
+        </div>
     </a>
         </div>
     </sction>
