CSS File navbar

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <body>
     <!--Navbar  -->
     <nav id="navbar">
-        <div class="navar_logo">
+        <div class="navbar__logo">
             <i class="fab fa-diaspora"></i>
             <a href="#">Junseok</a>
         </div>
         <div class="navbar_menu">
             <ul class="navbar__menu">
-                <li class="navbar__menu__item">Home</li>
+                <li class="navbar__menu__item active">Home</li>
                 <li class="navbar__menu__item">About</li>
                 <li class="navbar__menu__item">Skills</li>
                 <li class="navbar__menu__item">My work</li>
