--- a/index.html
+++ b/index.html
@@ -26,25 +26,29 @@
         </div>
         <div class="navbar_menu">
             <ul class="navbar__menu">
-                <li class="navbar__menu__item active">Home</li>
-                <li class="navbar__menu__item">About</li>
-                <li class="navbar__menu__item">Skills</li>
-                <li class="navbar__menu__item">My work</li>
-                <li class="navbar__menu__item">Testimonials</li>
-                <li class="navbar__menu__item">Contact</li>
+                <li class="navbar__menu__item active" data-link="#home">Home</li>
+                <li class="navbar__menu__item" data-link="#about">About</li>
+                <li class="navbar__menu__item" data-link="#skills">Skills</li>
+                <li class="navbar__menu__item" data-link="#work">My work</li>
+                <li class="navbar__menu__item" data-link="#testimonials">Testimonial</li>
+                <li class="navbar__menu__item" data-link="#contact">Contact</li>
             </ul>
         </div>
     </nav>
     <!-- Home -->
-    <sction id="home">
-        <img src="imgs/profile.jpg" 
-        alt="Junseok profile photo" 
-        class="home__avata"
-    />
-    <h1 class="home__title">Hello,<br />I`m Junseok Coder</h1>
-    <h2 class="home__desccription">디자인이 가능한 Front-End 개발자 입니다.</h2>
-    <button class="home__contact">Contact Me</button>
-    </sction>
+    <section id="home">
+        <div class="home__container">
+        <img
+            src="imgs/profile.jpg"
+            alt="Junseok's profile photo"
+            class="home__avatar"/> 
+        <h1 class="home__title">Hello, <br />I'm Junseok Coder</h1>
+        <h2 class="home__description">
+            디자인이 가능한 Front-End 개발자 입니다.
+        </h2>
+        <button class="home__contact">Contact Me</button>
+        </div>
+    </section>
     <!-- About -->
     <sction id="about">
         <h1>About me</h1>
