--- a/index.html
+++ b/index.html
@@ -50,53 +50,71 @@
         </div>
     </section>
     <!-- About -->
-    <sction id="about">
+    <sction id="about" class="section">
         <h1>About me</h1>
         <p>백엔드 개발자로 3년정도 일을했고 씨발 타이호 ㅈ같은 기업들어가서 Ms처럼 생활하다가 정신차리고 프론트개발자로 전환하게된사람입니다.</p>
         <div class="about__majors">
-            <div class="mjor">
-                <div class="major__icon">
-                    <i class="fa-brands fa-html5"></i>                    
-                </div>
-                <div class="major__title">Front-end</div>
-                <div class="major__description">HTML, CSS, JavaScript
-                    <br/>React,TypeScript
-                </div>
-                <div class="mjor">
-                    <div class="major__icon">                        
-                        <i class="fa-brands fa-java"></i>
-                    </div>
-                    <div class="major__title">Back-end</div>
-                    <div class="major__description">Java, JavaScript ,SQL
-                        <br/>Linux, NodeJs, Rest APIs
-                    </div>
-                </div>
-                <div class="mjor">
-                    <div class="major__icon">
-                        <i class="fa-solid fa-mobile"></i>                        
-                    </div>
-                    <div class="major__title">Mobile</div>
-                    <div class="major__description">Android, IOS, React Native,
-                        <br/>Flutter, Java, Kotlin
-                    </div>
-                </div>
+            <div class="major">
+            <div class="major__icon">
+                <i class="fab fa-html5"></i>
+            </div>
+            <h2 class="major__title">Front-end</h2>
+            <div class="major__description">
+                HTML, CSS, JavaScript
+                <br/>React,TypeScript
+            </div>
+            </div>
+            <div class="major">
+            <div class="major__icon">
+                <i class="fas fa-mobile"></i>
+            </div>
+            <h2 class="major__title">Mobile</h2>
+            <p class="major__description">
+                Android, IOS, React Native,
+                <br/>Flutter, Java, Kotlin
+            </p>
+            </div>
+            <div class="major">
+            <div class="major__icon">
+                <i class="fas fa-server"></i>
+            </div>
+            <h2 class="major__title">Back-end</h2>
+            <p class="major__description">
+                Java, JavaScript ,SQL
+                <br/>Linux, NodeJs, Rest APIs
+            </p>
             </div>
         </div>
         <div class="about__jobs">
-            <div class="job"></div>
-            <img src="/imgs/jobs/logo1.gif" alt="" class="job__logo">
-            <p class="job__name">ScRum i</p>
+            <div class="job">
+            <img
+            src="imgs/jobs/logo1.gif"
+            alt="samsung"
+            class="job__logo"
+            />
+        <div class="job__description">
+            <p class="job__name">
+            ScRum i
+            </p>
             <p class="job__period">2020-2021</p>
-        </div>        
-        <div class="about__jobs">
-            <div class="job"></div>
-            <img src="/imgs/jobs/logo.jpg" alt="" class="job__logo">
-            <p class="job__name">Tahio INST</p>
+        </div>
+        </div>
+        <div class="job">
+            <img
+            src="imgs/jobs/logo.jpg"
+            alt="samsung"
+            class="job__logo"
+            />
+            <div class="job__description">
+            <p class="job__name">
+                Tahio INST
+            </p>
             <p class="job__period">2021-2022</p>
-        </div>        
+            </div>
+        </div>
     </sction>
     <!-- Skills -->
-    <sction id="skills">
+    <sction id="skills"class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
@@ -166,7 +184,7 @@
         </div>
     </sction>
     <!-- Work -->
-    <sction id="work">
+    <sction id="work"class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -227,7 +245,7 @@
         </div>
     </sction>
     <!-- Testimonials -->
-    <sction id="testimonials">
+    <sction id="testimonials"class="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -258,7 +276,7 @@
         </div>
     </sction>
     <!-- Contact -->
-    <sction id="contact">
+    <sction id="contact"class="section">
         <h1 class="contach__title">Let`s talk</h1>
         <h2 class="contact__email">zkzk1gh@gmail.com</h2>
         <div class="contact__links">
