--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </section>
     <!-- About -->
-    <sction id="about" class="section">
+    <section id="about" class="section section__container">
         <h1>About me</h1>
         <p>백엔드 개발자로 3년정도 일을했고 씨발 타이호 ㅈ같은 기업들어가서 Ms처럼 생활하다가 정신차리고 프론트개발자로 전환하게된사람입니다.</p>
         <div class="about__majors">
@@ -114,77 +114,98 @@
         </div>
     </sction>
     <!-- Skills -->
-    <sction id="skills"class="section">
+    <section id="skills" class="section">
+        <div class="section__container">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
-            나의 장단점
+            Experience with all phases of the software life-cycle. Passion for
+            learning new technologies. Capable of working within a team environment
+            and independently. Ability to plan and time schedule, work under strict
+            time pressure and adapt quickly when needed.
         </p>
         <div class="skillset">
             <div class="skillset__left">
-                <h3 class="skillset_title">Skills</h3>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>HTML</span>
-                        <span>99%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill_value"></div>
-                    </div>
-                    </div>
-                    <div class="skill_description">
-                        <span>CSS</span>
-                        <span>99%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill_value"></div>
-                    </div>
-                    <div class="skill_description">
-                        <span>JavaScript</span>
-                        <span>99%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill_value"></div>
-                    </div>
-                    <div class="skill_description">
-                        <span>JAVA</span>
-                        <span>99%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill_value"></div>
-                    </div>
-                    <div class="skill_description">
-                        <span>REACT</span>
-                        <span>99%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill_value"></div>
-                    </div>
+            <h3 class="skillset__title">Skills</h3>
+            <div class="skill">
+                <div class="skill__description">
+                <span>HTML</span>
+                <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                <div class="skill__value" style="width: 99%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill__description">
+                <span>CSS</span>
+                <span>90%</span>
+                </div>
+                <div class="skill__bar">
+                <div class="skill__value" style="width: 90%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill__description">
+                <span>JavaScript</span>
+                <span>90%</span>
+                </div>
+                <div class="skill__bar">
+                <div class="skill__value" style="width: 90%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill__description">
+                <span>TypeScript</span>
+                <span>80%</span>
+                </div>
+                <div class="skill__bar">
+                <div class="skill__value" style="width: 80%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill__description">
+                <span>React</span>
+                <span>88%</span>
+                </div>
+                <div class="skill__bar">
+                <div class="skill__value" style="width: 88%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill__description">
+                <span>NodeJS</span>
+                <span>77%</span>
+                </div>
+                <div class="skill__bar">
+                <div class="skill__value" style="width: 77%;"></div>
+                </div>
+            </div>
             </div>
             <div class="skillset__right">
-                <div class="tools">
-                    <h3 class="skillset_title">Tools</h3>
-                    <ul class="tools_list">
-                        <li><span>Visual Studio Code</span></li>
-                        <li><span>IntelliJ</span></li>
-                        <li><span>Spring</span></li>
-                        <li><span>Android Studio Code</span></li>
-                        <li><span>Skentch app</span></li>
-                    </ul>
-                </div>
-                <div class="etc">
-                    <h3 class="skillset_title">Etc</h3>
-                    <ul class="etc__list">
-                        <li><span>Git</span></li>
-                        <li><span>Scrum Master</span></li>
-                        <li><span>Math</span></li>
-                    </ul>
-                </div>
+            <div class="tools">
+                <h3 class="skillset__title">Tools</h3>
+                <ul class="tools__list">
+                <li><span>Visual Studio Code</span></li>
+                <li><span>IntelliJ</span></li>
+                <li><span>Android Studio Code</span></li>
+                <li><span>iOS development tools</span></li>
+                <li><span>Sketch app</span></li>
+                </ul>
+            </div>
+            <div class="etc">
+                <h3 class="skillset__title">Etc</h3>
+                <ul class="etc__list">
+                <li><span>Git</span></li>
+                <li><span>Scrum master</span></li>
+                <li><span>Math</span></li>
+                </ul>
+            </div>
             </div>
         </div>
-    </sction>
+    </section>  
     <!-- Work -->
-    <sction id="work"class="section">
+    <section id="work"class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -243,9 +264,9 @@
         </div>
     </a>
         </div>
-    </sction>
+    </section>
     <!-- Testimonials -->
-    <sction id="testimonials"class="section">
+    <section id="testimonials"class="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -274,9 +295,9 @@
                 </div>
             </div>
         </div>
-    </sction>
+    </section>
     <!-- Contact -->
-    <sction id="contact"class="section">
+    <section id="contact"class="section">
         <h1 class="contach__title">Let`s talk</h1>
         <h2 class="contact__email">zkzk1gh@gmail.com</h2>
         <div class="contact__links">
@@ -290,6 +311,6 @@
         <p class="contact__rights">
             2022 Junseok coding            
         </p>
-    </sction>
+    </section>
 </body>
 </html>
