--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ellie's Portfolio</title>
+    <title>Junseok's Portfolio</title>
     <meta
     name="description"
     content="Portfolio for world-renowned software engineer Ellie"
@@ -19,8 +19,10 @@
     rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
 </head>
 <body>
+    
     <!-- Navbar -->
     <nav id="navbar">
     <div class="navbar__logo">
