--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <a href="#">Junseok</a>
     </div>
     <ul class="navbar__menu">
-        <li class="navbar__menu__item active" data-link="#home">Home</li>
-        <li class="navbar__menu__item" data-link="#about">About</li>
-        <li class="navbar__menu__item" data-link="#skills">Skills</li>
-        <li class="navbar__menu__item" data-link="#work">My work</li>
-        <li class="navbar__menu__item" data-link="#testimonials">Testimonial</li>
-        <li class="navbar__menu__item" data-link="#contact">Contact</li>
+        <li class="navbar__menu__item active" data-link="#home"data-link="#home">Home</li>
+        <li class="navbar__menu__item" data-link="#about"data-link="#about">About</li>
+        <li class="navbar__menu__item" data-link="#skills"data-link="#skills">Skills</li>
+        <li class="navbar__menu__item" data-link="#work"data-link="#work">My work</li>
+        <li class="navbar__menu__item" data-link="#testimonials"data-link="#testimonials">Testimonial</li>
+        <li class="navbar__menu__item" data-link="#contact"data-link="#contact">Contact</li>
     </ul>
     <!-- Toggle button -->
     <button class="navbar__toggle-btn">
