CSS and JS File Project animation modi

--- a/index.html
+++ b/index.html
@@ -264,14 +264,14 @@
         data-type="front-end"
         target="blank"
         >
-        <img class="project__img" src="imgs/projects/game.png" alt="navbar" />
+        <img class="project__img" src="imgs/projects/youtube.jpg" alt="navbar" />
         <div class="project__description">
             <h3>Shopping mall game</h3>
             <span>HTML, CSS, JavaScript, Json</span>
         </div>
         </a>
         <a href="" class="project" data-type="back-end">
-        <img class="project__img" src="imgs/projects/game.png" alt="" />
+        <img class="project__img" src="imgs/projects/youtube.jpg" alt="" />
         <div class="project__description">
             <h3>Project</h3>
             <span>Explanation</span>
