--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <span>Explanation</span>
         </div>
         </a>
-        <a href="" class="project" data-type="mobile">
+        <a href="" class="project" data-type="back-end">
         <img class="project__img" src="imgs/projects/game.png" alt="" />
         <div class="project__description">
             <h3>Project</h3>
