--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     
     <!-- Navbar -->
-    <nav id="navbar">
+    <nav id="navbar" jun="jun">
     <div class="navbar__logo">
         <i class="fab fa-diaspora"></i>
         <a href="#">Junseok</a>
